--- a/index.html
+++ b/index.html
@@ -10,9 +10,6 @@
 <body>
     <div class="container">
 		<div class ="form_page">
-			<img src="banner.jpg">
-		</div>
-		<div class ="form_page">
 			<form action="">
   			    <p><input class="form_width" type="text" id="idAge" placeholder="Введите ваш возраст" required></p>
 				<p><input class="form_width" type="text" id="idfirstName"  placeholder="Введите ваше имя" required></p>
@@ -30,3 +27,5 @@
 	<script src="app.js"></script>
 </body>
 </html>
+
+Italiano_Amore_Mio
