--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 <body>
     <div class="container">
 		<div class ="form_page">
+			<img src="banner.jpg">
+		</div>
+		<div class ="form_page">
 			<form action="">
   			    <p><input class="form_width" type="text" id="idAge" placeholder="Введите ваш возраст" required></p>
 				<p><input class="form_width" type="text" id="idfirstName"  placeholder="Введите ваше имя" required></p>
@@ -19,13 +22,37 @@
   			</form>
 		</div>
 	
+		<div class="inner">
+			<div class="item">
+				<img src="1.png" alt="Burger" class="img">
+				<button class="btn" id="btn1">Add</button>
+			</div>
+			<div class="item">
+				<img src="1.png" alt="Burger" class="img">
+				<button class="btn" id="btn2">Add</button>
+			</div>
+			<div class="item">
+				<img src="1.png" alt="Burger" class="img">
+				<button class="btn" id="btn3">Add</button>
+			</div>
+			<div class="item">
+				<img src="1.png" alt="Burger" class="img">
+				<button class="btn" id="btn4">Add</button>
+			</div>
+			<div class="item">
+				<img src="1.png" alt="Burger" class="img">
+				<button class="btn" id="btn5">Add</button>
+			</div>
+			<div class="item">
+				<img src="1.png" alt="Burger" class="img">
+				<button class="btn" id="btn6">Add</button>
+			</div>
+		</div>
 	</div>
-	
 	<div class="usercard" id="usercard"></div>
 		
+	
 	<script src="https://telegram.org/js/telegram-web-app.js"></script>
 	<script src="app.js"></script>
 </body>
 </html>
-
-Italiano_Amore_Mio
