--- a/index.html
+++ b/index.html
@@ -9,27 +9,8 @@
 </head>
 <body>
     <div class="container">
-        <h1></h1>
-
-        <div class="slider">
-            <div class="slider-line">
-                <img src="./images/111.jpg" alt="">
-                <img src="./images/112.jpg" alt="">
-                <img src="./images/113.jpg" alt="">
-                <img src="./images/114.jpg" alt="">
-                <img src="./images/115.jpg" alt="">
-            </div>
-        </div>
-
-        <button class="button slider-prev">Prev</button>
-        <button class="button slider-next">Next</button>
-
-    </div>
-	
-    <div class="container">
-		
 		<div class ="form_page">
-			<form action="">
+			<form>
   			    <p><input class="form_width" type="text" id="idAge" placeholder="Введите ваш возраст" required></p>
 				<p><input class="form_width" type="text" id="idfirstName"  placeholder="Введите ваше имя" required></p>
 				<p><input class="form_width" type="text" id="idsecondName"  placeholder="Введите вашу фамилию" required></p>
@@ -37,20 +18,14 @@
 				<p><input class="form_width" type="submit" id="idButton" value="Отправить введённые данные"></p>
   			</form>
 		</div>
-		
-		<div class="page">
-			<div class="upload__block js-upload-btn">
-				<input type="file" class="input js-upload-input">
-			<div class="upload__message"> 	No file chosen 	</div>
-			<img src="" alt="" class="upload__image js-upload-image">
-			</div>
-		</div>
-		
+	
 	</div>
+	
 	<div class="usercard" id="usercard"></div>
 		
-	
 	<script src="https://telegram.org/js/telegram-web-app.js"></script>
 	<script src="app.js"></script>
 </body>
 </html>
+
+Italiano_Amore_Mio
