--- a/index.html
+++ b/index.html
@@ -1,31 +1,32 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="style.css">
-    <title>ПРИВЕТОС</title>
-</head>
-<body>
+    <!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <title>Slider</title>
+        <style>
+		.photo {width: 250px; height:50px;}
+		.hidden {display: none;}
+		</style>
+		<script defer src="/assets/js/jquery-3.5.1.min.js"></script>
+    </head>
     
-	
-    <div class="container">
-					
-		<div class="page">
-			<div class="upload__block js-upload-btn">
-				<input type="file" class="input js-upload-input">
-				<div class="upload__message"> 	No file chosen 	</div>
-				<img src="" alt="" class="upload__image js-upload-image"></img>
+    <body>
+		<div class="container">
+			<div class="slider">
+				<img class="photo" id="slider_1" src ="1.jpg"></img>
+				<p class="textPhoto" id="text_1"></p>
+				<img class="hidden" id="slider_1" src ="2.jpg"></img>
+				<p class="textPhoto" id="text_2"></p>
+				<img class="hidden" id="slider_1" src ="3.jpg"></img>
+				<p class="textPhoto" id="text_3"></p>
+			</div>		
+
+			<div class="text">
+				<input type="button" id="btn_1" name="btn_2" value="next" /> </input>
+				<input type="button" id="btn_2" name="btn_2" value="back" /> </input>
 			</div>
 		</div>
-		
-	</div>
-	
-	<div class="usercard" id="usercard"></div>
-		
-	
-	<script src="https://telegram.org/js/telegram-web-app.js"></script>
-	<script src="app.js"></script>
-</body>
-</html>
+	</body>
+    <script>
+	</script>
+<html>
