--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
 	
 		<div class ="form_page">
-			<form>
+			<form action="check_post.php" method="post" >
   			    <p><input class="form_width" type="text" id="idAge" placeholder="Введите ваш возраст"></p>
 				<p><input class="form_width" type="text" id="idfirstName"  placeholder="Введите ваше имя"></p>
 				<p><input class="form_width" type="text" id="idsecondName"  placeholder="Введите вашу фамилию"></p>
