--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 	<div class="usercard" id="usercard"></div>
 		
 	<script src="https://telegram.org/js/telegram-web-app.js"></script>
+	<script src="jquery-3.6.1.min.js"></script>
 	<script src="app.js"></script>
 </body>
 </html>
